ledger-sync pipeline: fix whole-rupee amount parsing (INC-2026-09-11), dedupe by identity, honest reconciliation with the 7500.00 unexplained debit